--- a/mcda_py.ipynb
+++ b/mcda_py.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/GianFadiga/MCDA_FS/blob/main/mcda_py.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "f368e102",
       "metadata": {
         "id": "f368e102"
@@ -732,7 +742,8 @@
       "collapsed_sections": [
         "c55fda6b",
         "e263a37b"
-      ]
+      ],
+      "include_colab_link": true
     },
     "language_info": {
       "name": "python"
